--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,8 @@ html, body {
   overflow-x: hidden;
 }
 body {
-  position: relative
+  position: relative;
+  margin-bottom: -65px;
 }
 
 .nav-item {
@@ -68,6 +69,7 @@ body {
 }
 
 .week{
+	margin-right: 40px;
 	padding: 15px;
 	background-color: #fff;
 	color: #303181;
