--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,11 @@ body {
 }
 
 
+.banner {
+	margin-top:90px;
+	padding: 25px 0px;
+
+}
 
 
 .btn-primary:hover {
@@ -113,4 +118,10 @@ body {
 
 .bg-secondary li a{
 	color: #fff;
+}
+
+
+.live {
+	width:560px ;
+	height:315px
 }
